# switch-project

./: .eslintrc.json  .gitignore  README.md  components.json  current.key  current.key.pub  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: publish.yml
api/: update.ts
scripts/: check-node-version.mjs  generate-icon.mjs
src/: app.tsx  index.css  main.ts  preload.ts  renderer.tsx  window.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  contracts.rs  lib.rs  main.rs  node_manager.rs  node_versions.rs  package_managers.rs  project_directory.rs  runtime.rs  store.rs
src-tauri/src/commands/: app.rs  common.rs  environment.rs  mod.rs  projects.rs  runtime.rs
src-tauri/src/runtime/: address.rs  control.rs  dependencies.rs  entry.rs  environment.rs  events.rs  failure.rs  lifecycle.rs  mod.rs  process.rs
src/components/: assign-projects-to-group-dialog.tsx  confirm-project-group-reassign-dialog.tsx  delete-project-dialog.tsx  delete-project-group-dialog.tsx  dropzone-field.tsx  exit-running-projects-dialog.tsx  fnm-setup-dialog.tsx  install-node-version-dialog.tsx  loading-dots.tsx  move-project-group-dialog.tsx  node-install-progress.tsx  node-version-manager-dialog.tsx  node-version-sync-card.tsx  project-card.tsx  project-diagnosis-dialog.tsx  project-form-dialog.tsx  project-global-dropzone.tsx  project-group-dialog.tsx  project-group-section.tsx  project-logs-dialog.tsx  retry-project-node-version-dialog.tsx  startup-screen.tsx  startup-settings-dialog.tsx
src/components/ui/: button.tsx  (+6 more)
src/lib/: desktop.ts  loading-store.ts  ui-copy.ts  updater.ts
src/main/: node-versions.ts  project-schema.ts  project-store.ts  runtime-manager.ts
src/shared/: contracts.generated.ts  contracts.ts
(+28 files in other folders)
