[package]
name = "switch-project-panel"
version = "2.0.0"
description = "前端项目启动面板"
authors = ["Codex <codex@openai.com>"]
edition = "2021"
default-run = "switch-project-panel"

[lib]
name = "switch_project_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2.5.3"
tokio = { version = "1.48.0", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
ts-rs = "12.0.1"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
